--- a/runtime/blockchain/ccp_nanobash.yaml
+++ b/runtime/blockchain/ccp_nanobash.yaml
@@ -15,7 +15,7 @@ channels:
   mychannel:
     orderers:
     - orderer1
-    # - orderer2
+    - orderer2
     peers:
       peer1.org1.com:
         chaincodeQuery: true
