--- a/runtime/blockchain/fabconnect.yaml
+++ b/runtime/blockchain/fabconnect.yaml
@@ -14,8 +14,7 @@ events:
     path: /fabconnect/events
 http:
   port: 3000
-#   address: 0.0.0.0
-#   publicURL: http://ip:3000
+#  localAddr: "ip_address_here"
 rpc:
   useGatewayClient: true
   configpath: /fabconnect/ccp.yaml
