modify docker-compose.yml and ccp_testnetwork.yaml

--- a/runtime/blockchain/ccp_testnetwork.yaml
+++ b/runtime/blockchain/ccp_testnetwork.yaml
@@ -2,7 +2,7 @@ certificateAuthorities:
   ca.org1.example.com:
     tlsCACerts:
       path: /etc/firefly/organizations/peerOrganizations/org1.example.com/ca/ca.org1.example.com-cert.pem
-    url: https://org1.example.com:7054
+    url: https://ca_org1:7054
     registrar:
       enrollId: admin
       enrollSecret: adminpw
@@ -10,8 +10,6 @@ certificateAuthorities:
       verify: false
 channels:
   mychannel:
-    # orderers:
-    # - orderer1
     peers:
       peer1.org1.com:
         chaincodeQuery: true
@@ -44,11 +42,11 @@ orderers:
 organizations:
   org1:
     certificateAuthorities:
-    - ca.org1.example.com
+      - ca.org1.example.com
     cryptoPath: /etc/firefly/organizations/fabric-ca/org1/msp
     mspid: Org1MSP
     peers:
-    - peer1.org1.com
+      - peer1.org1.com
   org2:
     cryptoPath: /etc/firefly/organizations/fabric-ca/org2/msp
     mspid: Org2MSP
@@ -56,7 +54,7 @@ peers:
   peer1.org1.com:
     tlsCACerts:
       path: /etc/firefly/organizations/peerOrganizations/org1.example.com/tlsca/tlsca.org1.example.com-cert.pem
-    url: 172.24.236.188:7051
+    url: peer0.org1.example.com:7051
     grpcOptions:
       ssl-target-name-override: peer0.org1.example.com
       hostnameOverride: peer0.org1.example.com
@@ -65,36 +63,36 @@ version: 1.1.0%
 entityMatchers:
   peer:
     - pattern: peer0.org1.example.(\w+)
-      urlSubstitutionExp: 172.24.236.188:7051
+      urlSubstitutionExp: peer0.org1.example.com:7051
       sslTargetOverrideUrlSubstitutionExp: peer0.org1.example.com
       mappedHost: peer0.org1.example.com
 
     - pattern: (\w+).org1.example.(\w+):(\d+)
-      urlSubstitutionExp: 172.24.236.188:${2}
+      urlSubstitutionExp: peer0.org1.example.com:${2}
       sslTargetOverrideUrlSubstitutionExp: ${1}.org1.example.com
       mappedHost: ${1}.org1.example.com
 
     - pattern: (\w+):7051
-      urlSubstitutionExp: 172.24.236.188:7051
+      urlSubstitutionExp: peer0.org1.example.com:7051
       sslTargetOverrideUrlSubstitutionExp: peer0.org1.example.com
       mappedHost: peer0.org1.example.com
 
   orderer:
 
     - pattern: (\w+).example.(\w+)
-      urlSubstitutionExp: 172.24.236.188:7050
+      urlSubstitutionExp: orderer.example.com:7050
       sslTargetOverrideUrlSubstitutionExp: orderer.example.com
       mappedHost: orderer.example.com
 
     - pattern: (\w+).example.(\w+):(\d+)
-      urlSubstitutionExp: 172.24.236.188:7050
+      urlSubstitutionExp: orderer.example.com:7050
       sslTargetOverrideUrlSubstitutionExp: orderer.example.com
       mappedHost: orderer.example.com
 
   certificateAuthority:
     - pattern: (\w+).org1.example.(\w+)
-      urlSubstitutionExp: https://172.24.236.188:7054
-      sslTargetOverrideUrlSubstitutionExp: ca.org1.example.com
+      urlSubstitutionExp: https://ca_org1:7054
+      sslTargetOverrideUrlSubstitutionExp: org1.example.com
       mappedHost: ca.org1.example.com
 
   #   - pattern: (\w+).org2.example.(\w+)
