--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 version: "2.1"
+
+networks:
+    default:
+        external:
+            name: fabric_test
+
 services:
     fabconnect_0:
         container_name: firefly_fabconnect_0
@@ -11,15 +17,15 @@ services:
             - ./runtime/blockchain/ccp_testnetwork.yaml:/fabconnect/ccp.yaml
             - $HOME/fabric-samples/test-network/organizations:/etc/firefly/organizations
 
-         # If your services are listening on “localhost” and not on the Docker network (172.x.x.x),
-         # you need to run your container on the host network (network_mode)
-#        network_mode: host
+            # If your services are listening on “localhost” and not on the Docker network (172.x.x.x),
+            # you need to run your container on the host network (network_mode)
+            # network_mode: host
 
-         # In Mac to connect to the Docker host from inside a Docker container, use the "host.docker.internal" hostname
-         # should work without additional configuration, but if not, you can set the extra host this way.
-         # With "host-gateway" instead of an IP address.
-#        extra_hosts:
-#            - "host.docker.internal:host-gateway"
+            #  # In Mac to connect to the Docker host from inside a Docker container, use the "host.docker.internal" hostname
+            #  # should work without additional configuration, but if not, you can set the extra host this way.
+            #  # With "host-gateway" instead of an IP address.
+            # extra_hosts:
+            #     - "host.docker.internal:host-gateway"
         ports:
             - "3000:3000"
         healthcheck:
